# MMDEpiCluster

./: .gitignore  2.10  2.11  README.md  params.json  setup.sh
Analyze_CoChip/: Align.ipynb  SraRunTable.txt  align.sh  parse_sra_runtable.py
Conda-env/: environment.yml
Experiment_NB/: Data Analysis.ipynb  Data Analysis_8_patt_no_rescale.ipynb  Data Analysis_8_patt_rescale.ipynb  Validation Experiment.ipynb  Validation Experiment2.ipynb  intensity.json  patterns.json
Experiment_NB/Exp_conf/: Experiment_Low_Cov_0conf.json  Experiment_Low_Cov_1conf.json  Experiment_Low_Cov_2conf.json  Experiment_Low_Cov_3conf.json  Experiment_Low_Cov_4conf.json  Experiment_Med_Cov_0conf.json  Experiment_Med_Cov_1conf.json  Experiment_Med_Cov_2conf.json  Experiment_Med_Cov_3conf.json  Experiment_Med_Cov_4conf.json  config1.json  config10.json  config2.json  config3.json  config4.json  config5.json  config6.json  config7.json  config8.json  config9.json  configHiDense0.json  configHiDense1.json  configHiDense2.json  configHiDense3.json  configHiDense4.json  configLowSR0.json  configLowSR1.json  configLowSR2.json  configLowSR3.json  configLowSR4.json  configLowSR5.json  configLowSR6.json  configLowSR7.json  configLowSR8.json  configLowSR9.json  configStandardSR0.json  configStandardSR1.json  configStandardSR2.json  configStandardSR3.json  configStandardSR4.json  (+5 more)
Experiment_NB/Exp_conf_test/: Experiment_test1_0conf.json  Experiment_test1_1conf.json  Experiment_test2_0conf.json  Experiment_test2_1conf.json  config1.json  config2.json  (+1 more)
Simulation Script/: generate_config.py  simulation.py
Simulation_Script/: README.md  generate_config.py  generate_config_dense.py  generate_config_hi_cov.py  generate_config_high_cov.py  generate_config_low_cov.py  generate_config_med_cov.py  generate_config_test1.py  generate_config_test2.py  simulation.py
epi_cluster/: simulate.py
mmdiff3/: DESCRIPTION  NAMESPACE  NEWS
mmdiff3/src/: CMakeLists.txt  Makefile.common  R_init.cpp  R_init.hpp  kernel_function.hpp  mmd.cpp  mmd.hpp  mmdiff3.cpp  mmdiff3.hpp  rbf_joint_discrete_kernel.cpp  rbf_joint_discrete_kernel.hpp  rbf_joint_kernel.cpp  rbf_joint_kernel.hpp
(+56 files in other folders)
